[tool.poetry]
name = "study-streamlit"
version = "0.1.0"
description = ""
authors = ["komot <komotaymkty@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "1.27.0"
numpy = "1.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
